--- a/reports/report.html
+++ b/reports/report.html
@@ -1625,28 +1625,28 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,11989],[[4,5,6,7,[],[0,38,11949],[[8,9,10,11,[],[0,43,11931],[],[[12,0,0,[13,14],[0,488,11484,15],[]]],[],[1,0,1,0]],[16,17,18,19,[],[0,11978,6],[],[[20,0,0,[21,13,14],[0,11983,0,22],[]]],[],[1,0,1,0]]],[],[],[2,0,2,0]]],[],[],[2,0,2,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16496],[[4,5,6,7,[],[1,39,16454],[[8,9,10,11,[],[1,42,16448],[],[[12,0,0,[13,14],[1,718,15769],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Testsuites","*D:\\Users\\pavanonkar\\IdeaProjects\\Framework_Proj\\testsuites","*../testsuites","*Ui","*D:\\Users\\pavanonkar\\IdeaProjects\\Framework_Proj\\testsuites\\ui","*../testsuites/ui","*<p>Suite description\x3c/p>","*M1 Authentication","*D:\\Users\\pavanonkar\\IdeaProjects\\Framework_Proj\\testsuites\\ui\\m1_authentication.robot","*../testsuites/ui/m1_authentication.robot","*<p>Suite to verify Authorization of application\x3c/p>","*ABC-1 : Coach Valid Login","*Smoke","*UI","*Execution terminated by signal","*M2 Notes Tests","*D:\\Users\\pavanonkar\\IdeaProjects\\Framework_Proj\\testsuites\\ui\\m2_notes_tests.robot","*../testsuites/ui/m2_notes_tests.robot","*<p>Tests relate to Notes feature\x3c/p>","*Creating notes","*robot:exit","*Test execution stopped due to a fatal error."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Testsuites","*D:\\Users\\pavanonkar\\IdeaProjects\\Framework_Proj\\testsuites","*../testsuites","*Ui","*D:\\Users\\pavanonkar\\IdeaProjects\\Framework_Proj\\testsuites\\ui","*../testsuites/ui","*<p>Suite description\x3c/p>","*M1 Authentication","*D:\\Users\\pavanonkar\\IdeaProjects\\Framework_Proj\\testsuites\\ui\\m1_authentication.robot","*../testsuites/ui/m1_authentication.robot","*<p>Suite to verify Authorization of application\x3c/p>","*Scenario:Verify Valid Coach Login","*Smoke","*UI"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":2,"label":"All Tests","pass":0,"skip":0}],[{"combined":"NOT robot:exit","elapsed":"00:00:11","fail":1,"info":"combined","label":"NOT robot:exit","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"robot:exit","pass":0,"skip":0},{"elapsed":"00:00:11","fail":2,"label":"Smoke","pass":0,"skip":0},{"elapsed":"00:00:11","fail":2,"label":"UI","pass":0,"skip":0}],[{"elapsed":"00:00:12","fail":2,"id":"s1","label":"Testsuites","name":"Testsuites","pass":0,"skip":0},{"elapsed":"00:00:12","fail":2,"id":"s1-s1","label":"Testsuites.Ui","name":"Ui","pass":0,"skip":0},{"elapsed":"00:00:12","fail":1,"id":"s1-s1-s1","label":"Testsuites.Ui.M1 Authentication","name":"M1 Authentication","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"id":"s1-s1-s2","label":"Testsuites.Ui.M2 Notes Tests","name":"M2 Notes Tests","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:16","fail":0,"label":"Smoke","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"label":"UI","pass":1,"skip":0}],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Testsuites","name":"Testsuites","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"Testsuites.Ui","name":"Ui","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1","label":"Testsuites.Ui.M1 Authentication","name":"M1 Authentication","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1627303340646;
+window.output["baseMillis"] = 1627376484587;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12022;
+window.output["generated"] = 16532;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"background":{"fail":"#f66","pass":"#9e9","skip":"#fed84f"},"logURL":"log.html","rpa":false,"title":"SmokeANDUI_${BROWSER}"};
+window.settings = {"background":{"fail":"#f66","pass":"#9e9","skip":"#fed84f"},"logURL":"log.html","rpa":false,"title":"SmokeANDUI"};
 </script>
 <title></title>
 </head>
